--- a/src/sections/Draw/styles/Draw.css
+++ b/src/sections/Draw/styles/Draw.css
@@ -3,7 +3,7 @@
     position: relative;
     width: 100%;
     min-height: 100vh;
-    padding: 1.5rem;
+    padding: 0 1.5rem 1.5rem;
     box-sizing: border-box;
 }
 
