--- a/src/sections/Ranking/styles/Ranking.css
+++ b/src/sections/Ranking/styles/Ranking.css
@@ -1,5 +1,5 @@
 /* ==========================================================================
-   Ranking List
+   Ranking :
    ========================================================================== */
 
 .ranking-list {
